# ViewAnything

./: .gitignore  CLAUDE.md  LICENSE  Package.swift  README.md  build-app.sh
Resources/: AppIcon.icns
Sources/AnyViewApp/: App.swift  AppDelegate.swift  DropTargetView.swift  Info.plist  ViewerRenderer.swift  ViewerWindowController.swift  WebRenderer.swift  ZipExtractor.swift
Sources/AnyViewApp/Resources/: docx-preview.min.js
Sources/AnythingView/: App.swift  AppDelegate.swift  DocmodCLI.swift  FindBarView.swift  Info.plist  PDFRenderer.swift  QuickLookRenderer.swift  ViewerRenderer.swift  ViewerWindowController.swift  WebRenderer.swift  ZipExtractor.swift
Sources/ViewAnything/: ImageRenderer.swift  Info.plist  ViewerRenderer.swift  ViewerWindowController.swift
docs/: coverage-expansion.md
linux/: Cargo.toml  install.sh
linux/data/: anythingview.desktop  anythingview.xml  anyview.desktop
linux/src/: app.rs  docmod_cli.rs  drop_target.rs  file_watcher.rs  image_renderer.rs  main.rs  media_renderer.rs  pdf_renderer.rs  renderer.rs  web_renderer.rs  window.rs
scripts/: av
