[package]
name = "anythingview"
version = "0.1.0"
edition = "2021"
description = "Native Linux document viewer"
license = "MIT"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
webkit = { package = "webkit6", version = "0.4" }
poppler = { package = "poppler-rs", version = "0.24" }
gdk = { package = "gdk4", version = "0.9" }
glib = "0.20"
gio = "0.20"
pulldown-cmark = "0.12"
notify = "7"
urlencoding = "2"
html-escape = "0.2"
once_cell = "1"
mime_guess = "2"
base64 = "0.22"

[profile.release]
lto = true
codegen-units = 1
strip = true
